refactor: reorganize file structure and remove old documentation

--- a/scripts/population.ipynb
+++ b/scripts/population.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "02992af5",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3e3d4a74",
    "metadata": {},
    "outputs": [
@@ -317,13 +317,13 @@
        " '0lawSNBxNgJFQYJnQzLH8c']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(\"../../resources/population/ryans_artists.json\", \"r\") as f:\n",
+    "with open(\"data/ryans_artists.json\", \"r\") as f:\n",
     "    artist_ids = json.load(f)\n",
     "\n",
     "artist_ids"
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dc9c92c4",
    "metadata": {},
    "outputs": [
@@ -679,9 +679,9 @@
     }
    ],
    "source": [
-    "with open(\"../../resources/population/top_artists.json\", \"r\") as f:\n",
+    "with open(\"data/top_artists.json\", \"r\") as f:\n",
     "    artist_names = json.load(f)\n",
-    "with open(\"../../resources/population/top_artists_br.json\", \"r\") as f:\n",
+    "with open(\"data/top_artists_br.json\", \"r\") as f:\n",
     "    artist_names.extend(json.load(f))\n",
     "\n",
     "artist_names"
@@ -1096,7 +1096,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../../resources/population/personalized_users.json\", \"r\") as f:\n",
+    "with open(\"data/personalized_users.json\", \"r\") as f:\n",
     "    for user in json.load(f):\n",
     "        document = dict()\n",
     "        document[\"username\"] = user[\"username\"]\n",
@@ -1658,7 +1658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.3)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1672,7 +1672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
