--- a/scripts/population.ipynb
+++ b/scripts/population.ipynb
@@ -69,7 +69,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "mongodb_db = mongo_client[\"music_catalog\"]"
+    "mongodb_db = mongo_client[\"harmonics\"]"
    ]
   },
   {
@@ -1672,7 +1672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
